--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "curved-bottom-navigation-bar": "^2.0.5",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.0",
@@ -19,11 +22,13 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "typescript": "^5.1.3"
   },
   "private": true
